throw uncheckedRuntimeException in zip background thread